# ChangeLog for games-arcade/pydance-songs
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-arcade/pydance-songs/ChangeLog,v 1.7 2004/06/24 22:10:54 agriffis Exp $

  11 Apr 2004; David Holm <dholm@gentoo.org> pydance-songs-20040410.ebuild:
  Added to ~ppc.

  10 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org>
  pydance-songs-20030926.ebuild, pydance-songs-20040111.ebuild:
  remove older ebuilds to mirrors can forget raw files

*pydance-songs-20040410 (10 Apr 2004)

  10 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org>
  pydance-songs-20040410.ebuild:
  archive the pydance data so the mirrors don't mirror raw files

*pydance-songs-20040111 (14 Jan 2004)

  14 Jan 2004; Mike Frysinger <vapier@gentoo.org> :
  Version bump #38027.

*pydance-songs-20030926 (26 Sep 2003)

  26 Sep 2003; Mike Frysinger <vapier@gentoo.org> :
  Name change + more songs #29495.

*pyddr-songs-20030513 (13 May 2003)

  13 May 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added a couple of more songs from pyddr homepage.

*pyddr-songs-20030106 (05 Mar 2003)

  05 Mar 2003; Seemant Kulleen <seemant@gentoo.org>
  pyddr-songs-20030106.ebuild ChangeLog files/digest-pyddr-songs-20030106 :

  Song and step file for pyddr.