@@ -1,6 +1,9 @@
 # ChangeLog for games-arcade/pydance
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/pydance/ChangeLog,v 1.10 2004/07/14 08:10:38 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/pydance/ChangeLog,v 1.11 2004/08/23 00:31:25 lv Exp $
+
+  22 Aug 2004; Travis Tilley <lv@gentoo.org> pydance-1.0.2.ebuild:
+  added ~amd64 keyword
 
 *pydance-1.0.2 (14 Jul 2004)
 
